[package]
name = "blah"
version = "0.1.0"
authors = ["silasb <silas.baronda@gmail.com>"]
edition = "2018"
default-run = "blah"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# jemalloc = "0.3.0"
regex = "1.1.7"
simd-json = "0.3.7"
hashbrown = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-pickle = "0.6"
bytelines = "2.2"
memmap = "0.7.0"
lazy_static = "1.4.0"
crc32fast = "1.2.0"
sqlparser = "0.5.0"
nom-sql = "0.0.11"
toml = "0.5.6"
fake = "2.2"
json-tools = "*"
rayon = "1.1"
log = "0.4.0"
env_logger = "0.8.3"
